visualization of new data

--- a/Who owns lausanne.ipynb
+++ b/Who owns lausanne.ipynb
@@ -4,11 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Who owns Lausanne? \n",
-    "Introductory Jupyter Notebook.\n",
+    "# Who owns Lausanne? \n",
     "\n",
-    "### Introduction\n",
-    "#### Public data\n",
+    "## 1. Public data and owners\n",
+    "\n",
     "We obtained ftp access from the Lausanne office of cadastre. The data is a collection of ESRI shapefiles, describing roads, buildings, parcels, trees, waterbodies, and others.\n",
     "Each shapefile is a collection of features, and each feature has an associated geometry (e.g. the shape of a land parcel) and associated attributes ( e.g. the commune responsible for the parcel, the parcel number).\n",
     "\n",
@@ -21,9 +20,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Owner scraping\n",
+    "## 1.1 Scraping owners\n",
     "\n",
-    "### 1.1 Download XML files\n",
+    "### 1.1.2 Download XML files\n",
     "We wanted to associate each parcel in Lausanne to an owner. To do this, we divided Lausanne's surface in rectangles, and requested parcel informations for these rectangles to a service exposing the owners name.\n",
     "The code for the scraping is in [`/scraping/owners/scrape_owners_to_xml.py`](/edit/scraping/owners/scrape_owners_to_xml.py).\n",
     "\n",
@@ -56,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!ls \"scraped\" 2>/dev/null | head -10 # suppress error message by redirecting errors to null"
+    "!ls \"data/raw/owners/\" 2>/dev/null | head -10 # suppress error message by redirecting errors to null"
    ]
   },
   {
@@ -65,14 +64,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!head -n 20 \"scraped/534810.4210526316_155847.0_535161.3710526315_155589.0.xml\""
+    "!head -n 20 \"data/raw/owners/534810.4210526316_155847.0_535161.3710526315_155589.0.xml\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2 From XML to a single JSON\n",
+    "### 1.1.2 From XML to a single JSON\n",
     "We use the `xq` and `jq` programs to extract only the features we care about from the differents XML files and save them as a list of objects in a single json file.\n",
     "[`scraping/owners/multiple_xml_to_single_json.sh`](/edit/scraping/owners/multiple_xml_to_single_json.sh) is a small script leveraging the expressiveness of `jq` to efficiently concatenate the XML files into a single json, while also discarding all the attributes we have no interest in."
    ]
@@ -81,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.3 Remove duplicated and  clean owners JSON\n",
+    "### 1.1.3 Remove duplicated and  clean owners JSON\n",
     "The generated `proprio.json` JSON has duplicate entries, entries concerning other communes than lausanne and entries with missing owners. Furthermore, JSON is not the best format to handle tabluar data. The code in [`scraping/owners/owner_json_to_clean_csv.py`](/edit/scraping/owners/owner_json_to_clean_csv.py) clean the duplicates and tranfsorm the data in  CSV files."
    ]
   },
@@ -89,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.4 Joining the owners data with the cadastre shapefiles\n",
+    "### 1.1.4 Joining the owners data with the cadastre shapefiles\n",
     "The result of the previous preprocessing steps is a CSV file with three columns: `commune number`, `parcel number`, and `owner name`:"
    ]
   },
@@ -99,10 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO PIETRO ADD \n",
-    "\n",
-    "# READ 'proprio lausanne' CSV\n",
-    "# SHOW HEAD + COLUMNS"
+    "!head 'data/owners/proprio_lausanne.csv'"
    ]
   },
   {
@@ -116,7 +112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Cadastral data - data exploration\n",
+    "## 1.2 Cadastral data - data exploration\n",
     "\n",
     "We now have a GeoJSON, containing parcel geometries and parcel owners."
    ]
@@ -150,7 +146,10 @@
    "outputs": [],
    "source": [
     "with open('data/owners/parcelles_wgs84.geojson') as geojson:\n",
-    "    geo = json.load(geojson)"
+    "    geo = json.load(geojson)\n",
+    "# geo.features contains the list of parcelles\n",
+    "# example:\n",
+    "geo['features'][0]"
    ]
   },
   {
@@ -158,11 +157,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# geo.features contains the list of parcelles\n",
-    "# example:\n",
-    "geo['features'][0]"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -189,7 +184,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.1 Who is the biggest real estate owners?\n",
+    "### 1.2.1 Who is the biggest real estate owners?\n",
     "\n",
     "We can now quickly answer questions such as who are the 30 biggest property owners in Lausanne, by using the number of parcels owned as to measure \"bigness\":"
    ]
@@ -205,50 +200,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "plt.hist(parcels_per_owner.values, log=True, bins=100);"
+    "We can see that all thirty of biggest owners are either corporations, pension funds, or public institutions."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.2 PPE: Propriété par étages (Owners by floor)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Some building have more than one owners. Often, different floor of the same house is owned by different owners:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Check portion of parcels owned by PPE\n",
-    "parcels['owner'].astype('str').str.contains('PPE').mean()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Around 8% of parecels are owned by owners by floor. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2.3 Unique owners"
+    "### 1.2.2 Unique owners"
    ]
   },
   {
@@ -289,37 +251,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.4 Counting the number of PPE shares\n",
-    "With Propriété par étage, each building is divided in several shares, and has multiple owners. We don't have the owners for the PPE, but we can estimate the total number of PPE shares. An upper bound for the number of owners would be attributing a distinct owner to every PPE share."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "owners[owners.str.contains('PPE ')].head(10)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can see that PPE information is formatted in several ways:\n",
-    "\n",
-    "- ranges where the first number is fixed, and a suffix is added for each share: `PPE parcelles 3476-1 à 3476-6`\n",
-    "- ranges where the number represent the PPE share identifier: `PPE parcelles 16584 à 16609`\n",
-    "- ranges mixed with single values: `PPE parcelles 7502 à 7512, 20561, 20562`\n",
-    "\n",
-    "Parsing this values is not particularly challenging but it is boring, I'll think of it another time **TODO**."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2.5 Visualizing the distribution of missing values"
+    "### 1.2.3 Visualizing the distribution of missing values"
    ]
   },
   {
@@ -348,7 +280,7 @@
    "source": [
     "import folium\n",
     "def getMap():\n",
-    "    return folium.Map([46.55, 6.63], tiles='cartodbpositron', zoom_start=13)"
+    "    return folium.Map([46.524, 6.63], tiles='cartodbpositron', zoom_start=14)"
    ]
   },
   {
@@ -401,25 +333,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# replace the list of features by filtering out the features having None as proprio\n",
     "geo_clean['features'] =\\\n",
     "    [feature for feature in geo['features']\n",
-    "     if feature['properties']['proprio'] is not None]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(geo_clean['features']), len(geo['features'])"
+    "     if feature['properties']['proprio'] is not None]\n",
+    "\n",
+    "geo = geo_clean\n",
+    "features = [\n",
+    "    {'parc_num':feature['properties']['NO_PARC'],\n",
+    "    'owner':feature['properties']['proprio']} for feature in geo['features']\n",
+    "]\n",
+    "parcels = pd.DataFrame.from_records(features)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Show parcels by owner type"
+    "###  1.2.4 Show parcels by owner type\n",
+    "\n",
+    "The parcel owner format allows us to know the category of each owner. Societies are  by having 'AG' or 'SA' in their name. Similary for coperatives, foundations, and pension funds. We display a map colored by the owner category."
    ]
   },
   {
@@ -463,8 +396,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "owners_categories = owners.to_frame()\n",
-    "owners_categories['category'] = owners.apply(categorize)\n",
+    "owners_categories = parcels[['owner']]\n",
+    "owners_categories['category'] = owners_categories['owner'].apply(categorize)\n",
     "owners_categories = owners_categories.drop_duplicates().set_index('owner')"
    ]
   },
@@ -503,37 +436,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Rents data"
+    "## 2. Rents data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.1 Scraping\n",
+    "### 2.1 Scraping\n",
     "\n",
-    "**TODO**"
+    "In order to analyse how ownership patterns influence prices, we needed to complement the owners dataset with rent prices.\n",
+    "Rent prices are generally not public, but we can scrape from real-estate websites current rent listings, and extract the prices from there.\n",
+    "We therefore proceeded to scrape [anibis.ch](https://www.anibis.ch/fr/default.aspx) and [homegate.ch](https://www.homegate.ch/fr) to extract up-to-date datapoints.\n",
+    "The scripts use are the following:\n",
+    "\n",
+    "- for homegate: [`scraping/homegate/scrape_homegate.py`](/edit/scraping/homegate/scrape_homegate.py), a single well structure python program\n",
+    "- for anibis:\n",
+    "    1. [`scraping/anibis/anibis_scrape_listings.py`](/edit/scraping/anibis/anibis_scrape_listings.py) to download the index of results matching rents in lausanne\n",
+    "    2. [`scraping/anibis/anibis_parse_listings.py`](/edit/scraping/anibis/anibis_scrape_listings.py) to parse the listings index.\n",
+    "    3. [`scraping/anibis/anibis_scrape_offers.py`](/edit/scraping/anibis/anibis_scrape_offers.py) to download each single rent offer, given a parsed index\n",
+    "    4. [`scraping/anibis/anibis_parse_offers.py`](/edit/scraping/anibis/anibis_parse_offers.py) to parse the pages for each offer.\n",
+    "\n",
+    "We agreed on a shared format to simplify the merging of these two data sources."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.2 Removing duplicates"
+    "### 2.2 Removing duplicates\n",
+    "\n",
+    "Most rent listings are published on several websites. When merging the two data sources, we first need to figure out which results are present in both datasets to avoid duplicate datapoints. We consider listings to be duplicates if they have the same address and the same price. The code is in [`cleaning/merge_rent_offers.py`](/edit/cleaning/merge_rent_offers.py) ."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.3 Mapping street addresses to coordinates"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 3.2 Visualizing rents"
+    "### 2.3 Mapping street addresses to coordinates\n",
+    "The data cleaning up to now provided us with a list of json objects, each one representing a rent offer."
    ]
   },
   {
@@ -542,6 +483,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!head -20 data/rents/merged.json"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The address is in textual form. To perform geographical queries on it, we need to convert it to coordinates. To do so, we use the cadastral layer of building addresses, provided by the Cadastral offic of Lausanne.\n",
+    "During merging of the anibis and homegate datasets, the addresses were standardized to use the format used by this cadastral layer.\n",
+    "\n",
+    "To map an address to a coordinates couple, we iterate over all buildings in Lausanne, and check if the street name and the street number match those of our address. If there's a match, we extract the coordinates of the building from the cadastral layer.\n",
+    "\n",
+    "This is done in [cleaning/address_to_coords.py](/edit/cleaning/address_to_coords.py) ."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.4 Visualizing the rents dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load the json of rent prices\n",
     "rent_prices = json.load(open('data/rents/rent_prices.json'))"
    ]
   },
@@ -551,6 +521,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# load the geojson featuring borders for each quartier\n",
     "quartiers = json.load(open('data/quartiers.geojson'))"
    ]
   },
@@ -560,6 +531,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# compute the cost per squared meter of the rent\n",
     "for offer in rent_prices:\n",
     "    offer['CHF/m2'] = float(offer['price'])/float(offer['surface'])"
    ]
@@ -570,10 +542,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# draw a map showing the location of each vacancy, and the quartiers borders\n",
     "m = getMap()\n",
     "folium.GeoJson(quartiers).add_to(m)\n",
     "for offer in rent_prices:\n",
-    "    folium.Marker(offer['position'], popup=offer['price']).add_to(m)\n",
+    "    coords = offer['position']\n",
+    "    # Marker wants first the N coordinate and then E\n",
+    "    folium.Marker((coords[1], coords[0]), tooltip=offer['CHF/m2']).add_to(m)\n",
     "m"
    ]
   },
@@ -581,15 +556,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that several points fall outside of the city borders. But we still have a significant number of avaialable datapoints."
+    "We see that several points fall outside of the city borders. But we still have a significant number of avaialable datapoints. We will soon drop the outliers."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.3 Mapping rent datapoints to quartiers\n",
-    "We can use the python library `shapely` to find the quartier for each rent offer."
+    "### 2.5 Mapping rent datapoints to quartiers\n",
+    "Each rent data-point has a pair of coordinates localizing it in space. _quartiers_ are polygons, whose perimeter is a list of coordinates. We can use the python library `shapely`, that allows us to perform geometrical queries, to find the _quartier_ for each rent offer."
    ]
   },
   {
@@ -598,24 +573,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "quartier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#import the two data structures needed\n",
     "from shapely.geometry import Point, Polygon\n",
-    "#geojson has inversed coordinates\n",
+    "\n",
     "for offer in rent_prices:\n",
     "    offer['quartier'] = None\n",
     "    for quartier in quartiers['features']:\n",
     "        if quartier['properties']['Name'] == '90 - Zones foraines':\n",
-    "            continue #skip because we don't have owner data and it is a multypoligon instead of polygon\n",
+    "            #skip because we don't have owner data for zones foraines\n",
+    "            continue\n",
+    "        \n",
     "        offer_pos = Point(offer['position'])\n",
-    "        quartier_vertices = [(y, x) for x, y, z in quartier['geometry']['coordinates'][0]]\n",
+    "        #we extract the list of coordinates of the polygon vertices, discarding useless height\n",
+    "        quartier_vertices = [(east, north) for east, north, z in quartier['geometry']['coordinates'][0]]\n",
     "        quartier_poly = Polygon(quartier_vertices)\n",
     "        if quartier_poly.contains(offer_pos):\n",
     "            offer['quartier'] = quartier['properties']['Name']"
@@ -627,8 +597,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rents_per_quartier = pd.DataFrame.from_dict(rent_prices)\n",
-    "rents_per_quartier[['CHF/m2','quartier']].head(10)"
+    "'%06x' % (hash('ad') % (256**3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# let's sanity check by changing the color of the marker depending on the found category\n",
+    "\n",
+    "m = getMap()\n",
+    "folium.GeoJson(quartiers).add_to(m)\n",
+    "for offer in rent_prices:\n",
+    "    coords = offer['position']\n",
+    "    \n",
+    "    #little hack to assign a different color to each quartier\n",
+    "    color = '%06x' % (hash(offer['quartier']) % (256**3))\n",
+    "    \n",
+    "    # Marker wants first the N coordinate and then E\n",
+    "    folium.CircleMarker(\n",
+    "        (coords[1], coords[0]),\n",
+    "        radius=5, fill_color='#'+color, weight=0, fill_opacity=1\n",
+    "    ).add_to(m)\n",
+    "m"
    ]
   },
   {
@@ -638,6 +631,7 @@
    "outputs": [],
    "source": [
     "#display median price per neighborhood\n",
+    "rents_per_quartier = pd.DataFrame.from_dict(rent_prices)\n",
     "rents_per_quartier[['CHF/m2', 'quartier']].groupby('quartier').agg('median')"
    ]
   },
@@ -645,7 +639,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4. Linear model describing relation of ownership and price\n",
+    "## 3. Linear model describing relation of ownership and price\n",
     "Next, we will try to extract further insight from the data"
    ]
   }
