fix two wrong data locations

--- a/Who owns lausanne.ipynb
+++ b/Who owns lausanne.ipynb
@@ -495,7 +495,7 @@
     "\n",
     "To map an address to a coordinates couple, we iterate over all buildings in Lausanne, and check if the street name and the street number match those of our address. If there's a match, we extract the coordinates of the building from the cadastral layer.\n",
     "\n",
-    "This is done in [cleaning/address_to_coords.py](/edit/cleaning/address_to_coords.py) ."
+    "This is done in [`cleaning/address_to_coords.py`](/edit/cleaning/address_to_coords.py) ."
    ]
   },
   {
@@ -522,7 +522,7 @@
    "outputs": [],
    "source": [
     "# load the geojson featuring borders for each quartier\n",
-    "quartiers = json.load(open('data/quartiers.geojson'))"
+    "quartiers = json.load(open('data/maps/quartiers.geojson'))"
    ]
   },
   {
