fix bug in merging

--- a/Who owns lausanne.ipynb
+++ b/Who owns lausanne.ipynb
@@ -290,6 +290,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# we need to register to the API at\n",
+    "# https://www.geo.admin.ch/fr/geo-services-proposes/geoservices/services-de-consultation-applications-cartographie-en-ligne-sig-web/interface-de-programmation-api/inscription.html\n",
+    "#folium.Map([46.524, 6.63],\n",
+    "#            tiles=\"https://wmts20.geo.admin.ch/1.0.0/ch.swisstopo.pixelkarte-farbe/default/current/3857/{z}/{x}/{y}.jpeg\",\n",
+    "#           attr='swisstopo')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "m = getMap()\n",
     "\n",
     "def style_function(feature):\n",
@@ -492,11 +505,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!jq length data/rents/tutti.json\n",
+    "!jq length data/rents/anibis_with_streets.json\n",
+    "!jq length data/rents/homegate.json"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before cleaning and merging we have a total of ~1300 offers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "filenames = [\"./data/rents/tutti.json\", \n",
     "             \"./data/rents/anibis_with_streets.json\",\n",
     "            \"./data/rents/homegate.json\"]\n",
     "merged = cleaning.merge_rent_offers.main(filenames)\n",
-    "#print(json.dumps(merged, ensure_ascii=False, indent=2))"
+    "len(merged)"
    ]
   },
   {
@@ -545,7 +576,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "offers = cleaning.address_to_coords.main('./data/rents/all_rents.json')"
+    "offers = cleaning.address_to_coords.main('./data/rents/all_rents.json')\n",
+    "len(offers)"
    ]
   },
   {
@@ -728,8 +760,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for offer in rent_prices:\n",
-    "    print(offer['position'])"
+    "parcel_polygons = []\n",
+    "for parcel in geo['features']:\n",
+    "    coords = parcel['geometry']['coordinates'][0][0]\n",
+    "    num_parc = parcel['properties']['NO_PARC']\n",
+    "    proprio = parcel['properties']['proprio']\n",
+    "    poly = Polygon(coords)\n",
+    "    parcel_polygons.append((num_parc, proprio, poly))"
    ]
   },
   {
@@ -738,7 +775,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Polygon(geo['features'][1]['geometry']['coordinates'][0][0])"
+    "%%time\n",
+    "for offer in rent_prices:\n",
+    "    offer_pos = Point(offer['position'])\n",
+    "    for parc_n, proprio, poly in parcel_polygons:\n",
+    "        if poly.contains(offer_pos):\n",
+    "            offer['proprio'] = proprio\n",
+    "    if 'proprio' not in offer:\n",
+    "        offer['proprio'] = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for o in rent_prices:\n",
+    "    print(o['proprio'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# duplicate but how can one tell?\n",
+    "[o for o in rent_prices if o['proprio'] is not None and 'Meuli' in o['proprio']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DANGER: CFF est propriétaire de Avenue de Sévelin 13 mais pas de 13 A-E. Nécessite meilleure parsing\n",
+    "# des addresse pour ne pas faire de ces erreures.\n",
+    "[o for o in rent_prices if o['proprio'] is not None and 'CFF' in o['proprio']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Polygon([(0,0),(1,0), (0,1)]).contains(Point(0.1, 0.1))"
    ]
   },
   {
