linear regression on owner type shows no influence on price

--- a/Who owns lausanne.ipynb
+++ b/Who owns lausanne.ipynb
@@ -382,15 +382,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "list(print(str) for str in owners[owners.str.contains(r\"fédération\", case=False)]);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import re\n",
     "def categorize(owner):\n",
     "    regex_cats = [\n",
@@ -426,7 +417,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# m = getMap()\n",
+    "m = getMap()\n",
     "\n",
     "def style_function(feature):\n",
     "    colors = {\n",
@@ -791,16 +782,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for o in rent_prices:\n",
-    "    print(o['proprio'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# duplicate but how can one tell?\n",
     "[o for o in rent_prices if o['proprio'] is not None and 'Meuli' in o['proprio']]"
    ]
@@ -822,7 +803,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Polygon([(0,0),(1,0), (0,1)]).contains(Point(0.1, 0.1))"
+    "len([o for o in rent_prices if o['proprio'] is None])\n",
+    "# datapoints in zone foraine. We didn't scrape the owners for that quartier"
    ]
   },
   {
@@ -850,6 +832,70 @@
     "$$\n",
     "dist(q) = \\beta_1 f_{public}(q) + \\beta_2  f_{s.a.}(q) + ~...~ +\\beta_j  f_{privates}(q)\n",
     "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.1 influence of owner type on average price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import linear_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "covariates = pd.DataFrame.from_records(\n",
+    "    [{\n",
+    "        'owner_type':categorize(offer['proprio']),\n",
+    "        'price/m2':offer['CHF/m2']\n",
+    "     } for offer in rent_prices if offer['proprio'] is not None]\n",
+    ")\n",
+    "covariates['owner_type'] = covariates['owner_type'].astype('category')\n",
+    "samples_per_cat = covariates['owner_type'].value_counts()\n",
+    "\n",
+    "covariates = pd.get_dummies(covariates)\n",
+    "\n",
+    "#drop one indicator to avoid multiple colinearity\n",
+    "covariates = covariates.drop('owner_type_private', axis='columns')\n",
+    "\n",
+    "coeffs = np.empty(covariates.shape) #columns: num of covariates minus the response (y) plus 1 for the intercept\n",
+    "for i in range(covariates.shape[0]):\n",
+    "    sample = covariates.values[np.random.choice(\n",
+    "        covariates.shape[0], size=covariates.shape[0], replace=True)]\n",
+    "    lm = linear_model.LinearRegression(fit_intercept=True)\n",
+    "    X = sample[:,1:]\n",
+    "    y = sample[:,0]\n",
+    "    lm.fit(X, y)\n",
+    "    coeffs[i,0] = lm.intercept_\n",
+    "    coeffs[i,1:] = lm.coef_\n",
+    "\n",
+    "print('%-40s\\t%s\\t%s\\t%s' % ('feature', '.025 qtile', '.975 qtile', 'n'))\n",
+    "print()\n",
+    "print('%-40s:\\t%f\\t%f' % ('intercept', lower[0], upper[0]))\n",
+    "lower, upper = np.quantile(coeffs, q=(0.025,0.975), axis=0)\n",
+    "for typ, lower_q, upper_q in zip(covariates.columns[1:], lower[1:], upper[1:]):\n",
+    "    print('%-40s:\\t%f\\t%f\\t%d' % (typ, lower_q, upper_q, samples_per_cat[typ.split('_')[-1]]))"
    ]
   },
   {
