--- a/Who owns lausanne.ipynb
+++ b/Who owns lausanne.ipynb
@@ -847,24 +847,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn import linear_model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import scipy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from sklearn import linear_model\n",
+    "import scipy\n",
+    "\n",
     "covariates = pd.DataFrame.from_records(\n",
     "    [{\n",
     "        'owner_type':categorize(offer['proprio']),\n",
@@ -880,6 +865,7 @@
     "covariates = covariates.drop('owner_type_private', axis='columns')\n",
     "\n",
     "coeffs = np.empty(covariates.shape) #columns: num of covariates minus the response (y) plus 1 for the intercept\n",
+    "#bootstrap confidence interval for linear regression coefficients\n",
     "for i in range(covariates.shape[0]):\n",
     "    sample = covariates.values[np.random.choice(\n",
     "        covariates.shape[0], size=covariates.shape[0], replace=True)]\n",
@@ -896,6 +882,41 @@
     "lower, upper = np.quantile(coeffs, q=(0.025,0.975), axis=0)\n",
     "for typ, lower_q, upper_q in zip(covariates.columns[1:], lower[1:], upper[1:]):\n",
     "    print('%-40s:\\t%f\\t%f\\t%d' % (typ, lower_q, upper_q, samples_per_cat[typ.split('_')[-1]]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.2 Heatmap\n",
+    "Can a heatmap show spacial dependency of rent prices? Let's investigate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.cm as cm\n",
+    "import matplotlib.colors as colors\n",
+    "\n",
+    "# folium.GeoJson(quartiers).add_to(m)\n",
+    "min_price, max_price = np.quantile([offer['CHF/m2'] for offer in rent_prices], q = (0.05, 0.90))\n",
+    "\n",
+    "m = getMap()\n",
+    "for offer in rent_prices:\n",
+    "    coords = offer['position']\n",
+    "    \n",
+    "    color_rgb = cm.RdYlGn(1. - (offer['CHF/m2'] - min_price)/(max_price - min_price))\n",
+    "    color_hex = colors.to_hex(color_rgb, keep_alpha=False)\n",
+    "    \n",
+    "    # Marker wants first the N coordinate and then E\n",
+    "    folium.CircleMarker(\n",
+    "        (coords[1], coords[0]),\n",
+    "        radius=5, fill_color=color_hex, weight=0, fill_opacity=1, tooltip=offer['CHF/m2']\n",
+    "    ).add_to(m)\n",
+    "m"
    ]
   },
   {
