--- a/Who owns lausanne.ipynb
+++ b/Who owns lausanne.ipynb
@@ -26,7 +26,7 @@
     "We wanted to associate each parcel in Lausanne to an owner. To do this, we divided Lausanne's surface in rectangles, and requested parcel informations for these rectangles to a service exposing the owners name.\n",
     "The code for the scraping is in [`/scraping/owners/scrape_owners_to_xml.py`](/edit/scraping/owners/scrape_owners_to_xml.py).\n",
     "\n",
-    "The result of owner scraping is a set of 400 xml files, each containing parcel information for a geographical rectangle. The data are saved in the following directory: `data/raw/owners/`\n",
+    "The result of owner scraping is a set of 400 xml files, each containing parcel information for a geographical rectangle. The data are saved in the following directory: `data/raw/owners/`.\n",
     "\n",
     "For privacy reason we decided not to push any data on the online github respository.\n",
     "\n",
@@ -79,8 +79,20 @@
    "metadata": {},
    "source": [
     "### 1.1.2 From XML to a single JSON\n",
-    "We use the `xq` and `jq` programs to extract only the features we care about from the different XML files and save them as a list of objects in a single json file.\n",
-    "[`scraping/owners/multiple_xml_to_single_json.sh`](/edit/scraping/owners/multiple_xml_to_single_json.sh) is a small script leveraging the expressiveness of `jq` to efficiently concatenate the XML files into a single json, while also discarding all the attributes we have no interest in."
+    "We use `yq`, `xq` and `jq` programs to extract only the features we care about from the different XML files and save them as a list of objects in a single json file.\n",
+    "[`scraping/owners/multiple_xml_to_single_json.sh`](/edit/scraping/owners/multiple_xml_to_single_json.sh) is a small script leveraging the expressiveness of `jq` to efficiently concatenate the XML files into a single json, while also discarding all the attributes we have no interest in.\n",
+    "\n",
+    "The result file of the shell program is a JSON file`/data/owners/all_owners_dirty.json`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert all XML into one JSON file\n",
+    "!scraping/owners/multiple_xml_to_single_json.sh all_owners_dirty.json 2>/dev/null"
    ]
   },
   {
@@ -88,7 +100,19 @@
    "metadata": {},
    "source": [
     "### 1.1.3 Remove duplicated and  clean owners JSON\n",
-    "The generated `proprio.json` JSON has duplicate entries, entries concerning other communes than Lausanne and entries with missing owners. Furthermore, JSON is not the best format to handle tabular data. The code in [`scraping/owners/owner_json_to_clean_csv.py`](/edit/scraping/owners/owner_json_to_clean_csv.py) cleans the duplicates and tranfsorms the data into a CSV file."
+    "The generated `all_owners_dirty.json` JSON has duplicate entries, entries concerning other communes than Lausanne and entries with missing owners. Furthermore, JSON is not the best format to handle tabular data. The code in [`scraping/owners/owner_json_to_clean_csv.py`](/edit/scraping/owners/owner_json_to_clean_csv.py) cleans the duplicates and tranfsorms the data into `all_owners.csv` CSV file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Clean dirty data and write it to 'all_owners.csv' \n",
+    "import scraping.owners\n",
+    "scraping.owners.owner_json_to_clean_csv.main('./data/owners/all_owners_dirty.json',\n",
+    "                                            './data/owners/all_owners.csv')"
    ]
   },
   {
@@ -105,14 +129,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!head 'data/owners/proprio_lausanne.csv'"
+    "import pandas as pd\n",
+    "all_owners = pd.read_csv('data/owners/all_owners.csv')\n",
+    "all_owners.head(3)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We would like to add the owner name to the attributes of the parcels shapefile that we obtained from \"Office du Cadastre\". To do so, we import the csv and the shapefile in QGIS, and we join this two \"tables\" by parcel number. The resulting geographical layer contains all the geographical features representing the parcels, and additionally the owner name for each parcel. We can now export this layer as a GeoJSON, making sure to use `WGS-84` as the coordinate system,  and continue our exploration."
+    "We would like to add the owner name to the attributes of the parcels shapefile that we obtained from \"Office du Cadastre\". To do so, we import the csv and the shapefile in QGIS, and we join this two \"tables\" by parcel number. The resulting geographical layer contains all the geographical features representing the parcels, and additionally the owner name for each parcel. \n",
+    "\n",
+    "We can now export this layer as a GeoJSON, making sure to use `WGS-84` as the coordinate system, and continue our exploration.\n",
+    "\n",
+    "The exported *geojson* file is saved at `data/owners/all_owners_parcelles.geojson`."
    ]
   },
   {
@@ -130,7 +160,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import numpy as np\n",
     "import json\n",
     "\n",
@@ -140,31 +169,14 @@
     "import seaborn as sns\n",
     "sns.set()\n",
     "\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "\n",
     "import cleaning"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('data/owners/parcelles_wgs84.geojson') as geojson:\n",
-    "    geo = json.load(geojson)\n",
-    "\n",
-    "# geo.features contains the list of parcelles\n",
-    "# example:\n",
-    "geo['features'][0]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We load the attributes of each geographical feature in Pandas:"
+    "We start loading the `geojson` file"
    ]
   },
   {
@@ -173,12 +185,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "with open('data/owners/all_owners_parcelles.geojson') as geojson:\n",
+    "    geo = json.load(geojson)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "geo.keys()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The information we need are located into features column. Such columns is a list of properties where each properties contains the owners, the localization the intereted area (geometry)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(json.dumps(geo['features'][6], indent=2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We load the attributes of each geographical feature in a pandas dataframe:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# select 'number (id) of parcels' and owners name\n",
     "features = [\n",
-    "    {'parc_num':feature['properties']['NO_PARC'],\n",
-    "    'owner':feature['properties']['proprio']} for feature in geo['features']\n",
+    "    {'parc_num': feature['properties']['NO_PARC'],\n",
+    "     'owner': feature['properties']['proprio']} for feature in geo['features']\n",
     "]\n",
     "parcels = pd.DataFrame.from_records(features)\n",
-    "parcels.head()"
+    "parcels.head(3)"
    ]
   },
   {
@@ -204,7 +259,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that all thirty of the biggest owners are either corporations, pension funds, or public institutions. There is not a single private person in the list."
+    "We can see that most of the biggest owners are either corporations, pension funds, or public institutions. \n",
+    "\n",
+    "We note that there is no a single private person in the list. This data tell us that our analysis will have to take into consideration other kind of owners than the private ones."
    ]
   },
   {
@@ -215,21 +272,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "owners = parcels['owner'].dropna()\n",
-    "print('total parcels', len(owners))\n",
-    "print('unique owners', len(owners.unique()))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are 8k parcels in Lausanne. We are interestd to know how many people/societies own them. This number doesn't account for PPE (_prorpiété par étage_, single flats owned by privates). A lower bound on the owners can be estimated by discarding the PPE entreis alltogether."
+    "After dropping the non assigned values, we can see the total number of parcels owned and the unique owners:"
    ]
   },
   {
@@ -238,14 +284,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(owners[~owners.str.contains('PPE ')].unique())"
+    "owners = parcels['owner'].dropna()\n",
+    "print('Total parcels', len(owners))\n",
+    "print('Unique owners', len(owners.unique()))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is a lower bound for the number of owners. Although, the real number is likely to be much higher since it's unlikely that most of these unique owners are also owners of a PPE share."
+    "There are almost 8'000 parcels in Lausanne. \n",
+    "\n",
+    "BWe are interestd to know how many people and societies own them. This number doesn't account for PPE (_prorpiété par étage_, single flats owned by privates). A lower bound on the owners can be estimated by discarding the PPE entries altogether:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lower_bounds_owners = len(owners[~owners.str.contains('PPE ')].unique())\n",
+    "print('Unique lower-bounds owners', lower_bounds_owners)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a lower bound for the number of owners. Although, the real number is likely to be much higher since it's unprobable that most of these unique owners are also owners of a PPE share."
    ]
   },
   {
@@ -270,6 +337,7 @@
    "metadata": {},
    "source": [
     "22% of the parcels don't have owner information. Indeed, many parcels reperesent roads, and as such they didn't have an owner on the site we scraped. Also we didn't scrape the values for the northern part of Lausanne, which is mostly farmland and woods.\n",
+    "\n",
     "Let's try to visualize the missing values on a map:"
    ]
   },
@@ -309,14 +377,14 @@
     "    \"\"\"Returns color red for missing values, blue for valid.\"\"\"\n",
     "    return {\n",
     "        'fillColor':\n",
-    "            'red' if feature['properties']['proprio'] is None else 'blue', \n",
+    "        'red' if feature['properties']['proprio'] is None else 'blue', \n",
     "        'stroke': False\n",
     "    }\n",
     "\n",
     "geo_fol = folium.GeoJson(geo, style_function=style_function)\n",
     "\n",
     "m.add_child(geo_fol)\n",
-    "map_.save('maps/missing_values.html')\n",
+    "m.save('maps/missing_values.html')\n",
     "m"
    ]
   },
@@ -326,9 +394,9 @@
    "source": [
     "This visualization is not very snappy or legible, but we can interpret it as follows:\n",
     "\n",
-    "- Red areas are parcels for which the proprietary is `None`. The northern parts of Lausanne were not scraped, since we didn't want to overload the scraped website and since they're mostly rural areas. It is expected that they are red.\n",
+    "- Red areas are parcels for which the proprietary is not assigned, i.e `None`. The northern parts of Lausanne were not scraped, since we didn't want to overload the scraped website and since they're mostly rural areas. It is expected that they are red.\n",
     "- Zooming into central Lausanne, we see that roads have unknown owners. This is also expected.\n",
-    "- For some areas blue and red overlap, yielding purple parcels. This is because the dataset is slightly dirty and some bigger parcels with no owner _contain_ smaller parcels with known owners. Therefore the colors overlap.\n",
+    "- For some areas blue and red overlap, yielding purple parcels. This is because the dataset is slightly dirty and some bigger parcels with no owners _contains_ smaller parcels with known owners. Therefore the colors overlap.\n",
     "\n",
     "Having asserted that the dataset is fairly sane, we can drop the features were the owner is `None`, since they will be of no use to us (roads), and will make the map drawing slower."
    ]
@@ -417,7 +485,8 @@
    "source": [
     "owners_categories = parcels[['owner']]\n",
     "owners_categories['category'] = owners_categories['owner'].apply(categorize)\n",
-    "owners_categories = owners_categories.drop_duplicates().set_index('owner')"
+    "owners_categories = owners_categories.drop_duplicates().set_index('owner')\n",
+    "owners_categories.head(5)"
    ]
   },
   {
@@ -471,7 +540,9 @@
     "\n",
     "In order to analyse how ownership patterns influence prices, we needed to complement the owners dataset with rent prices.\n",
     "Rent prices are generally not public, but we can scrape from real estate websites' current rent listings, and extract the prices from there.\n",
-    "We therefore proceeded to scrape [anibis.ch](https://www.anibis.ch/fr/default.aspx), [homegate.ch](https://www.homegate.ch/fr) and [tutti.ch](https://tutti.ch) to extract up-to-date data points.\n",
+    "\n",
+    "We scraped from [anibis.ch](https://www.anibis.ch/fr/default.aspx), [homegate.ch](https://www.homegate.ch/fr) and [tutti.ch](https://tutti.ch) and extracted up-to-date real estate announcements.\n",
+    "\n",
     "The scripts used are the following:\n",
     "\n",
     "- for homegate: [`scraping/homegate/scrape_homegate.py`](/edit/scraping/homegate/scrape_homegate.py), a single well structured python program\n",
@@ -481,13 +552,20 @@
     "    2. [`scraping/anibis/anibis_parse_listings.py`](/edit/scraping/anibis/anibis_scrape_listings.py) to parse the listings index.\n",
     "    3. [`scraping/anibis/anibis_scrape_offers.py`](/edit/scraping/anibis/anibis_scrape_offers.py) to download each single rent offer, given a parsed index\n",
     "    4. [`scraping/anibis/anibis_parse_offers.py`](/edit/scraping/anibis/anibis_parse_offers.py) to parse the pages for each offer.\n",
-    "    5. [`cleaning/parse_street_and_number.py`](/edit/cleaning/parse_street_and_number.py) parses addresses to street name and number\n",
+    "    5. [`cleaning/parse_street_and_number.py`](/edit/cleaning/parse_street_and_number.py) parses addresses to street name and number.\n",
     "- for tutti:\n",
     "    1. [`scraping/tutti/tutti_scrape_listings.py`](/edit/scraping/tutti/tutti_scrape_listings.py) to download the index of results matching rents in lausanne\n",
-    "    2. [`scraping/tutti/tutti_parse_listings.py`](/edit/scraping/tutti/tutti_scrape_listings.py) to parse the listings index. data\n",
+    "    2. [`scraping/tutti/tutti_parse_listings.py`](/edit/scraping/tutti/tutti_scrape_listings.py) to parse the listings index into a JSON file.\n",
     "\n",
     "We agreed on a shared format to simplify the merging of these three data sources."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
