denoising mostly done

--- a/Who owns lausanne.ipynb
+++ b/Who owns lausanne.ipynb
@@ -397,7 +397,7 @@
     "\n",
     "m.add_child(geo_fol)\n",
     "m.save('export/missing_values.html')\n",
-    "#m"
+    "m"
    ]
   },
   {
@@ -419,16 +419,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "geo_clean = all_owners_parcelles.copy()\n",
+    "geo_parcels = all_owners_parcelles.copy()\n",
     "\n",
     "# replace the list of features by filtering out the \n",
     "# features having None as proprio\n",
-    "geo_clean['features'] = [\n",
-    "    feature for feature in geo_clean['features']\n",
+    "geo_parcels['features'] = [\n",
+    "    feature for feature in geo_parcels['features']\n",
     "    if feature['properties']['proprio'] is not None\n",
     "]\n",
     "\n",
-    "geo = geo_clean\n",
     "features = [\n",
     "    {'parc_num':feature['properties']['NO_PARC'],\n",
     "    'owner':feature['properties']['proprio']} for feature in geo['features']\n",
@@ -521,12 +520,12 @@
     "    }\n",
     "\n",
     "folium.GeoJson(\n",
-    "    geo_clean, \n",
+    "    geo_parcels, \n",
     "    style_function=style_function,\n",
     "    # show the owner at hover\n",
     "    tooltip=folium.GeoJsonTooltip(['proprio'])\n",
     ").add_to(m)\n",
-    "#m"
+    "m"
    ]
   },
   {
@@ -607,7 +606,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. [`scraping/anibis/anibis_parse_listings.py`](/edit/scraping/anibis/anibis_scrape_listings.py) to parse the listings index.\n",
+    "1. [`scraping/anibis/anibis_parse_listings.py`](/edit/scraping/anibis/anibis_parse_listings.py) to parse the listings index.\n",
     "2. [`scraping/anibis/anibis_parse_offers.py`](/edit/scraping/anibis/anibis_parse_offers.py) to parse the pages for each offer."
    ]
   },
@@ -636,7 +635,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before cleaning and merging we have a total of ~1700 offers"
+    "Before cleaning and merging we have a total of ~1200 offers"
    ]
   },
   {
@@ -772,7 +771,7 @@
     "    coords = offer['position']\n",
     "    # Marker wants first the N coordinate and then E\n",
     "    folium.Marker((coords[1], coords[0]), tooltip=offer['CHF/m2']).add_to(m)\n",
-    "#m"
+    "m"
    ]
   },
   {
@@ -837,7 +836,7 @@
     "        (coords[1], coords[0]),\n",
     "        radius=5, fill_color='#'+color, weight=0, fill_opacity=1\n",
     "    ).add_to(m)\n",
-    "#m"
+    "m"
    ]
   },
   {
@@ -882,13 +881,16 @@
    "outputs": [],
    "source": [
     "# for each parcels, construct a Polygon\n",
-    "parcel_polygons = []\n",
-    "for parcel in geo['features']:\n",
-    "    coords = parcel['geometry']['coordinates'][0][0]\n",
-    "    num_parc = parcel['properties']['NO_PARC']\n",
-    "    proprio = parcel['properties']['proprio']\n",
-    "    poly = Polygon(coords)\n",
-    "    parcel_polygons.append((num_parc, proprio, poly))"
+    "def get_parcel_polygons():\n",
+    "    parcel_polygons = []\n",
+    "    for parcel in geo['features']:\n",
+    "        coords = parcel['geometry']['coordinates'][0][0]\n",
+    "        num_parc = parcel['properties']['NO_PARC']\n",
+    "        proprio = parcel['properties']['proprio']\n",
+    "        poly = Polygon(coords)\n",
+    "        parcel_polygons.append((num_parc, proprio, poly))\n",
+    "    return parcel_polygons\n",
+    "parcel_polygons = get_parcel_polygons()"
    ]
   },
   {
@@ -1030,7 +1032,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.2 Heatmap\n",
+    "## Heatmap\n",
     "Can a heatmap show spacial dependency of rent prices? Let's investigate"
    ]
   },
@@ -1180,6 +1182,104 @@
     "from tools import heatmap_prices_from_pd\n",
     "hm = heatmap_prices_from_pd(prices_for_all_parcelles)\n",
     "hm.save('export/heatmap_prices_all_parcellesk=5.html')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Denoising owner type\n",
+    "\n",
+    "We want to revisit the colorful owner types map by trying to find spatial clusters with a certain ownership type.\n",
+    "We will approach this problem as a denoising one, and we will attribute to each parcel an owner type which is given by the category the most represented in its local neighborhood.\n",
+    "We therefore find the K nearest neighbors to a parcel (itself included), and assign as type the most represented type in the neighbors.\n",
+    "\n",
+    "- Find a representative point for each parcel (maybe the center of mass of the parcel)\n",
+    "- For each parcel find its nearest neighbors\n",
+    "- compute the distribution of ownership for each neihborhood\n",
+    "- assign to the parcel the ownership in the neighborhood"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "polygons_df = pd.DataFrame.from_records(get_parcel_polygons())\n",
+    "polygons_df.columns = ('parc_no', 'proprio', 'poly')\n",
+    "polygons_df['owner_type'] = polygons_df['proprio'].apply(categorize)\n",
+    "polygons_df['x'] = polygons_df['poly'].apply(lambda poly: poly.centroid.x)\n",
+    "polygons_df['y'] = polygons_df['poly'].apply(lambda poly: poly.centroid.y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "K = 5\n",
+    "types = polygons_df[['parc_no', 'owner_type']].copy().set_index('parc_no').sort_index()['owner_type']\n",
+    "for (idx, (parc_no, proprio, _, owner_type, x, y)) in polygons_df.iterrows():\n",
+    "    distances2 = (polygons_df['x'] - x)**2 + (polygons_df['y'] - y)**2\n",
+    "    neigh = distances2.sort_values()[:K]\n",
+    "    neighbor_parcels = pd.concat((polygons_df, neigh), axis='columns', join='inner')\n",
+    "    types.loc[parc_no] = neighbor_parcels['owner_type'].value_counts().index[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "polygons_df['owner_type'].value_counts().plot.pie()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "types.value_counts().plot.pie()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = getMap()\n",
+    "#TODO weight by area\n",
+    "def style_function(feature):\n",
+    "    colors = {\n",
+    "        'coop': 'yellow',\n",
+    "        'société' : 'red',\n",
+    "        'public' : 'green',\n",
+    "        'private': 'blue',\n",
+    "        'PPE': 'orange',\n",
+    "        'pension': 'purple',\n",
+    "        'fondation/association' : 'brown'\n",
+    "        \n",
+    "    }\n",
+    "    parc_num = feature['properties']['NO_PARC']\n",
+    "    cat = types[parc_num]\n",
+    "    \n",
+    "    return {\n",
+    "        'stroke':False,\n",
+    "        'fillColor': colors[cat]\n",
+    "    }\n",
+    "\n",
+    "folium.GeoJson(\n",
+    "    geo_parcels, \n",
+    "    style_function=style_function,\n",
+    "    # show the owner at hover\n",
+    "    tooltip=folium.GeoJsonTooltip(['proprio'])\n",
+    ").add_to(m)\n",
+    "m"
    ]
   }
  ],
