--- a/Who owns lausanne.ipynb
+++ b/Who owns lausanne.ipynb
@@ -111,24 +111,10 @@
    "source": [
     "# Clean dirty data and write it to 'all_owners.csv' \n",
     "import scraping.owners\n",
-    "scraping.owners.owner_json_to_clean_csv.main('./data/owners/all_owners_dirty.json',\n",
-    "                                            './data/owners/all_owners.csv')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can now remove 'all_owners_dirty.json':"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!rm ./data/owners/all_owners_dirty.json"
+    "scraping.owners.owner_json_to_clean_csv.main(\n",
+    "    './data/owners/all_owners_dirty.json',\n",
+    "    './data/owners/all_owners.csv'\n",
+    ")"
    ]
   },
   {
@@ -373,6 +359,9 @@
    "outputs": [],
    "source": [
     "import folium\n",
+    "\n",
+    "!mkdir export\n",
+    "\n",
     "def getMap():\n",
     "    return folium.Map([46.524, 6.63], tiles='cartodbpositron', zoom_start=14)"
    ]
@@ -644,7 +633,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd_tutti = pd.read_json(\"./data/rents/tutti.json\")\n",
+    "pd_tutti = pd.read_json(\"./data/raw/rents/tutti.json\")\n",
     "pd_tutti.replace('nan',np.nan, inplace=True)\n",
     "\n",
     "pd_tutti.head(2)"
